[gd_scene load_steps=20 format=3 uid="uid://6480xvei676x"]

[ext_resource type="Script" uid="uid://b0b0igc1kjj0k" path="res://scripts/settigs.gd" id="1_s5kjm"]
[ext_resource type="FontFile" uid="uid://bkham1u6p33co" path="res://assets/font/PixelOperator8-Bold.ttf" id="2_c41gf"]
[ext_resource type="Texture2D" uid="uid://dvyvnklhdkoc" path="res://assets/sprites/back-button (2).png" id="3_1lafv"]
[ext_resource type="FontFile" uid="uid://c64uwy3an36dg" path="res://assets/font/PixelOperator8.ttf" id="4_5i0f2"]
[ext_resource type="Shader" uid="uid://8lskv0elldo2" path="res://random/crt.gdshader" id="5_sqyyf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwat4"]
bg_color = Color(0.968627, 0.85098, 0.121569, 1)
border_width_left = 180
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.796078, 0.486275, 0.0313726, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 179.0
expand_margin_top = 14.0
expand_margin_right = 5.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vnlta"]
bg_color = Color(0.97, 0.882053, 0.3104, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 9.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_astk4"]
bg_color = Color(0.97, 0.882053, 0.3104, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 9.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kek77"]
bg_color = Color(0.772549, 0.47451, 0.0313726, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c57u"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efxa6"]
bg_color = Color(0.772549, 0.47451, 0.0313726, 1)
border_width_bottom = 4
border_color = Color(0.8, 0.8, 0.0588235, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dg77c"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_pwat4"]
Button/styles/hover = SubResource("StyleBoxFlat_kek77")
Button/styles/hover_mirrored = null
Button/styles/hover_pressed = SubResource("StyleBoxFlat_4c57u")
Button/styles/normal = SubResource("StyleBoxFlat_efxa6")
Button/styles/pressed = SubResource("StyleBoxFlat_dg77c")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vnlta"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_reu5o"]
bg_color = Color(0.772549, 0.47451, 0.0313726, 1)
border_width_bottom = 4
border_color = Color(0.8, 0.8, 0.0588235, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_vnlta"]
Button/styles/hover = SubResource("StyleBoxFlat_reu5o")
Button/styles/hover_mirrored = null
Button/styles/hover_pressed = SubResource("StyleBoxFlat_reu5o")
Button/styles/normal = SubResource("StyleBoxFlat_reu5o")
Button/styles/pressed = SubResource("StyleBoxFlat_reu5o")
CheckButton/styles/pressed = null

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_astk4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_astk4"]
shader = ExtResource("5_sqyyf")

[sub_resource type="QuadMesh" id="QuadMesh_lqsak"]
size = Vector2(1280, 720)
center_offset = Vector3(640, 360, 0)

[node name="settingscene" type="Node2D"]
script = ExtResource("1_s5kjm")

[node name="ColorSlider" type="HSlider" parent="."]
offset_left = 256.0
offset_top = 218.0
offset_right = 607.0
offset_bottom = 279.0
theme_override_constants/center_grabber = 1
theme_override_constants/grabber_offset = -3
theme_override_styles/slider = SubResource("StyleBoxFlat_pwat4")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_vnlta")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_astk4")

[node name="DisplayLabel" type="Label" parent="."]
modulate = Color(2, 2, 2, 1)
offset_left = 940.0
offset_top = 193.0
offset_right = 1020.0
offset_bottom = 273.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.984314, 0.690196, 0.337255, 1)
theme_override_colors/font_outline_color = Color(0.611765, 0.380392, 0.0431373, 1)
theme_override_fonts/font = ExtResource("2_c41gf")
theme_override_font_sizes/font_size = 80
text = "X"

[node name="BackButton" type="Button" parent="."]
z_index = 10
offset_left = -3.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 55.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_pwat4")
theme_override_colors/font_disabled_color = Color(0.941176, 0.831373, 0.117647, 0.768627)
theme_override_colors/font_hover_pressed_color = Color(0.933333, 0.819608, 0.117647, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.827451, 0.435294, 1)
theme_override_colors/font_outline_color = Color(0.868851, 0.626936, 0.269727, 1)
theme_override_colors/font_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_focus_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_fonts/font = ExtResource("2_c41gf")
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_vnlta")
icon = ExtResource("3_1lafv")
flat = true

[node name="TextColour" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 82.0
offset_top = 236.0
offset_right = 242.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.930101, 0.872975, 0, 1)
theme_override_colors/font_shadow_color = Color(0.807843, 0.521569, 0.0980392, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.235, 0.851)
theme_override_fonts/font = ExtResource("4_5i0f2")
theme_override_font_sizes/font_size = 18
text = "Text Colour"

[node name="TextColour2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 927.0
offset_top = 277.0
offset_right = 1037.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.930101, 0.872975, 0, 1)
theme_override_colors/font_shadow_color = Color(0.807843, 0.521569, 0.0980392, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.235, 0.851)
theme_override_fonts/font = ExtResource("4_5i0f2")
theme_override_font_sizes/font_size = 18
text = "Preview"

[node name="Mute" type="CheckButton" parent="."]
modulate = Color(1.03, 1.028, 1.03, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 419.0
offset_right = 335.0
offset_bottom = 465.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_vnlta")
theme_override_colors/font_disabled_color = Color(0.941176, 0.831373, 0.117647, 0.768627)
theme_override_colors/font_hover_pressed_color = Color(0.933333, 0.819608, 0.117647, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.827451, 0.435294, 1)
theme_override_colors/font_outline_color = Color(0.868851, 0.626936, 0.269727, 1)
theme_override_colors/font_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_focus_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_fonts/font = ExtResource("2_c41gf")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_astk4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_reu5o")
text = " SFX"

[node name="text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 410.0
offset_top = 4.0
offset_right = 785.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.930101, 0.872975, 0, 1)
theme_override_colors/font_shadow_color = Color(0.807843, 0.521569, 0.0980392, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.235, 0.851)
theme_override_fonts/font = ExtResource("2_c41gf")
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="HideSprite" type="CheckButton" parent="."]
modulate = Color(1.03, 1.028, 1.03, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 527.0
offset_right = 336.0
offset_bottom = 573.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_vnlta")
theme_override_colors/font_disabled_color = Color(0.941176, 0.831373, 0.117647, 0.768627)
theme_override_colors/font_hover_pressed_color = Color(0.933333, 0.819608, 0.117647, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.827451, 0.435294, 1)
theme_override_colors/icon_pressed_color = Color(0.707967, 0.707967, 0.707967, 1)
theme_override_colors/font_outline_color = Color(0.868851, 0.626936, 0.269727, 1)
theme_override_colors/font_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_focus_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_fonts/font = ExtResource("2_c41gf")
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxEmpty_astk4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_reu5o")

[node name="volume" type="HSlider" parent="."]
offset_left = 256.0
offset_top = 315.0
offset_right = 607.0
offset_bottom = 376.0
theme_override_constants/center_grabber = 1
theme_override_constants/grabber_offset = -3
theme_override_styles/slider = SubResource("StyleBoxFlat_pwat4")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_vnlta")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_astk4")
max_value = 1.0
step = 0.001
value = 0.15

[node name="TextColour3" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 82.0
offset_top = 333.0
offset_right = 246.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.930101, 0.872975, 0, 1)
theme_override_colors/font_shadow_color = Color(0.807843, 0.521569, 0.0980392, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.235, 0.851)
theme_override_fonts/font = ExtResource("4_5i0f2")
theme_override_font_sizes/font_size = 19
text = "BGM Volume"

[node name="Mute2" type="CheckButton" parent="."]
modulate = Color(1.03, 1.028, 1.03, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 82.0
offset_top = 639.0
offset_right = 337.0
offset_bottom = 685.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_vnlta")
theme_override_colors/font_disabled_color = Color(0.941176, 0.831373, 0.117647, 0.768627)
theme_override_colors/font_hover_pressed_color = Color(0.933333, 0.819608, 0.117647, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.827451, 0.435294, 1)
theme_override_colors/font_outline_color = Color(0.868851, 0.626936, 0.269727, 1)
theme_override_colors/font_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_focus_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_fonts/font = ExtResource("2_c41gf")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_astk4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_reu5o")
text = " Effect"

[node name="effect" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="effect"]
material = SubResource("ShaderMaterial_astk4")
mesh = SubResource("QuadMesh_lqsak")

[connection signal="value_changed" from="ColorSlider" to="." method="_on_color_slider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Mute" to="." method="_on_mute_pressed"]
[connection signal="toggled" from="Mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="HideSprite" to="." method="_on_hide_sprite_pressed"]
[connection signal="toggled" from="HideSprite" to="." method="_on_hide_sprite_toggled"]
[connection signal="value_changed" from="volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="Mute2" to="." method="_on_mute_pressed"]
[connection signal="toggled" from="Mute2" to="." method="_on_mute_2_toggled"]
